--- a/CovidWin/CovidWindowControl.xaml
+++ b/CovidWin/CovidWindowControl.xaml
@@ -7,20 +7,53 @@
              Background="{DynamicResource {x:Static vsshell:VsBrushes.WindowKey}}"
              Foreground="{DynamicResource {x:Static vsshell:VsBrushes.WindowTextKey}}"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300"
+             d:DesignWidth="300"
              Name="MyToolWindow">
     <Grid>
-        <!--<StackPanel Orientation="Vertical">
-            <TextBlock Margin="10" HorizontalAlignment="Center">CovidWindow</TextBlock>
-            <Button Content="Click me!" Click="button1_Click" Width="120" Height="80" Name="button1"/>
-        </StackPanel>-->
-
         <StackPanel Orientation="Vertical">
-            <TextBox Name="resultsTextBox" 
+            <ListView 
+                MaxHeight="900"
+                ItemsSource="{Binding}"
+                Name="TestingSitesLV"
+                ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                <ListView.ItemTemplate>
+                    <DataTemplate DataType="local:SearchResultsList">
+                        <StackPanel AutomationProperties.Name="{Binding Name}" MaxWidth="360" >
+                            <TextBlock FontSize="14" FontWeight="DemiBold" Margin="7,7,0,0" Text="{Binding Name}" TextWrapping="Wrap"/>
+                            <TextBlock FontStyle="Italic" Margin="7,3,0,3" Opacity=".6" >
+                                <Run>Last Updated :</Run>
+                                <Run Text="{Binding Updated}"/>
+                            </TextBlock>
+                            <TextBlock Margin="7,0,0,0" Opacity=".8" Text="{Binding Number}" TextWrapping="Wrap" />
+                            <TextBlock Margin="7,0,0,0" Opacity=".8" Text="{Binding Address}" TextWrapping="Wrap" />
+                            <TextBlock Margin="7,0,0,10" Opacity=".6" Text="{Binding Description}" TextWrapping="Wrap" />
+                        </StackPanel>
+                        <!--<Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Name}" Margin="10,6,0,0" TextWrapping="Wrap" Width="250" FontSize="14" FontWeight="Bold"/>
+                            <TextBlock Grid.Column="1" Grid.Row="2"  Margin="10,0,0,6" TextWrapping="Wrap" Width="250">
+                                <Run>Updated :</Run>
+                                <Run Text="{Binding Updated}"/>
+                            </TextBlock>
+                            <TextBlock Grid.Column="1" Grid.Row="3" Text="{Binding Description}" Margin="10,0,0,6" TextWrapping="Wrap" Width="250"/>
+                        </Grid>-->
+                    </DataTemplate>
+                </ListView.ItemTemplate> 
+               
+            </ListView>
+
+            <!--<TextBox Name="resultsTextBox" 
                 Height="500.0"
                 Width="800.0"
                 IsReadOnly="True">
-            </TextBox>
+            </TextBox>-->
+
+            <!--<TextBlock Margin="10" HorizontalAlignment="Center">CovidWindow</TextBlock>
+            <Button Content="Click me!" Click="button1_Click" Width="120" Height="80" Name="button1"/>-->
         </StackPanel>
     </Grid>
 </UserControl>
