--- a/CovidWin/CovidWindowControl.xaml
+++ b/CovidWin/CovidWindowControl.xaml
@@ -3,44 +3,38 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:vsshell="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
-             Background="{DynamicResource {x:Static vsshell:VsBrushes.WindowKey}}"
-             Foreground="{DynamicResource {x:Static vsshell:VsBrushes.WindowTextKey}}"
              mc:Ignorable="d"
              d:DesignWidth="300"
              Name="MyToolWindow">
     <Grid>
         <StackPanel Orientation="Vertical">
+            <TextBlock FontSize="14" FontStyle="Italic" Foreground="White" Margin="0 15 0 15" HorizontalAlignment="Center" TextWrapping="Wrap">
+                Type in the name of the state in the above search box.
+            </TextBlock>
+            <Image 
+                Source="https://media.giphy.com/media/l46Cy1rHbQ92uuLXa/giphy.gif"
+                Margin="0 5 0 30" Width="200" />
             <ListView 
-                MaxHeight="900"
+                Background="Transparent"
                 ItemsSource="{Binding}"
+                MaxHeight="400"
                 Name="TestingSitesLV"
                 ScrollViewer.VerticalScrollBarVisibility="Hidden">
                 <ListView.ItemTemplate>
                     <DataTemplate DataType="local:SearchResultsList">
-                        <StackPanel AutomationProperties.Name="{Binding Name}" MaxWidth="360" MouseDown="OnSiteClick" >
-                            <TextBlock FontSize="14" FontWeight="DemiBold" Margin="7,7,0,0" Text="{Binding Name}" TextWrapping="Wrap"/>
-                            <TextBlock Margin="7,3,0,0" Opacity=".8" Text="{Binding Number}" TextWrapping="Wrap" />
-                            <TextBlock Margin="7,3,0,0" Opacity=".8" Text="{Binding Address}" TextWrapping="Wrap" />
-                            <!--<TextBlock Margin="7,0,0,10" Opacity=".6" Text="{Binding Description}" TextWrapping="Wrap"/>-->
-                            <TextBlock FontStyle="Italic" Margin="7,3,0,5" Opacity=".6" >
+                        <StackPanel AutomationProperties.Name="{Binding Name}" Background="Transparent" MaxWidth="360" MouseDown="OnSiteClick" >
+                            <TextBlock FontSize="14" FontWeight="DemiBold" Foreground="MediumPurple" Margin="7,7,0,0" Text="{Binding Name}" TextWrapping="Wrap"/>
+                            <TextBlock Foreground="WhiteSmoke" Margin="7,3,0,0" Opacity=".8" Text="{Binding Number}" TextWrapping="Wrap" />
+                            <TextBlock Foreground="WhiteSmoke" Margin="7,3,0,0" Opacity=".8" Text="{Binding Address}" TextWrapping="Wrap" />
+                            <!--<TextBlock Foreground="WhiteSmoke" Margin="7,0,0,0" Opacity=".6" Text="{Binding Description}" TextWrapping="Wrap"/>-->
+                            <TextBlock Foreground="WhiteSmoke" FontStyle="Italic" Margin="7,3,0,5" Opacity=".6" >
                                 <Run>Last Updated :</Run>
                                 <Run Text="{Binding Updated}"/>
                             </TextBlock>
                         </StackPanel>
                     </DataTemplate>
-                </ListView.ItemTemplate> 
-               
+                </ListView.ItemTemplate>
             </ListView>
-
-            <!--<TextBox Name="resultsTextBox" 
-                Height="500.0"
-                Width="800.0"
-                IsReadOnly="True">
-            </TextBox>-->
-
-            <!--<TextBlock Margin="10" HorizontalAlignment="Center">CovidWindow</TextBlock>
-            <Button Content="Click me!" Click="button1_Click" Width="120" Height="80" Name="button1"/>-->
         </StackPanel>
     </Grid>
 </UserControl>
